[package]
name = "fromnow"
version = "0.1.1"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]


[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
# panic = 'unwind'   # ensures panic is unwind safe

# [profile.release]
# panic = 'unwind'   # ensures panic is unwind safe

[dependencies.version]
version = "2"

[dependencies.clap]
version = "2.9"
features = [ "suggestions" ]

[dependencies.chomp]
git = "https://github.com/m4rw3r/chomp"
rev = "c1287f2e7ee1558d50a8cab95e1bf900f5a47061"
# version = "~0.2.5"

[dependencies.chrono]
version = "0.2"
